--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.21.1",
+    "react-router-hash-link": "^2.4.3",
     "react-scroll-to-top": "^3.0.0",
     "react-type-animation": "^3.2.0"
   },
