--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^6.21.1",
     "react-router-hash-link": "^2.4.3",
     "react-scroll-to-top": "^3.0.0",
+    "react-toastify": "^10.0.1",
     "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
